# venomous-dashboard

./: .gitattributes  Makefile  README.md
dashboard/: .dockerignore  .gitignore  .prettierignore  .prettierrc.mjs  README.md  cspell.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
dashboard/docker/: Dockerfile.dev
dashboard/envs/: .env.development
dashboard/prisma/: schema.prisma
dashboard/src/: middleware.ts
document/: auth-service-database-design-en.md  auth-service-database-design-zh.md  authorization-service-database-design.md  index.md  notes-service-database-design-en.md  notes-service-database-design-zh.md
document/dashboard/: index.md
infrastructure/database/: README.md  create-databases.sh  db-init.sh  init-db.sql
infrastructure/docker/: docker-compose.dev.yml
protobuf/: .gitignore  package-lock.json  package.json
protobuf/scripts/: generate-go.sh  generate-rust.sh  generate-ts.sh
servers/api-gateway/: .dockerignore  .gitignore  Dockerfile.dev  go.mod  main.go
servers/authorization/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev
servers/authorization/docker/: Dockerfile.dev
servers/authorization/src/: lib.rs  main.rs  schema.rs
servers/authorization/src/database/: mod.rs
servers/authorization/src/handlers/: admin.rs  auth.rs  mod.rs  token.rs
servers/authorization/src/models/: database.rs  mod.rs  request.rs  response.rs
servers/authorization/src/utils/: jwt.rs  mod.rs  password.rs
servers/media/: .dockerignore
servers/workflows/: .dockerignore  Dockerfile.dev
services/api-gateway/: go.mod  (+2 more)
(+217 files in other folders)
